@@ -3,6 +3,7 @@ Revision history for Calendar
 {{$NEXT}}
     - Create a basic PDF calendar for a given year
       in any of several languages (default: en)
+    - Removed .caldata method
 
 0.0.4  2023-03-07T17:34:56-06:00
     - Removed all information on future capabilities and
